--- a/worlds.html
+++ b/worlds.html
@@ -63,7 +63,7 @@
     <div class="body">
         <ul class="worldnav">
             <div class="links">
-                <li><a href="#gameworlds">Game Worlds</a></li>
+                <li><a href="#pvpworlds">PVP Worlds</a></li>
                 <li><a href="#puttputt">Putt Putt Worlds</a></li>
                 <li><a href="#Halloween">Halloween Worlds</a></li>
                 <li><a href="#other">Other Worlds</a></li>
@@ -75,8 +75,8 @@
             </div>
         </ul>
         <section class="Body">
-            <div id="gameworlds" class="section Section__Worlds-top">
-                <h1>Game Worlds</h1>
+            <div id="pvpworlds" class="section Section__Worlds-top">
+                <h1>PVP Worlds</h1>
                 <div class="viewport">
                     <div id="left" class="arrowleft"></div>
                     <div id="right" class="arrowright"></div>
@@ -109,7 +109,7 @@
                                 </div>
                                 <div class="desc">
                                     <p>
-                                        Play a killing rendition of the game Red Light‚ Green Light inspired by the Netflix series ＂Squid Game＂ǃ Who will be the first to reach the finish line?
+                                        Play a rendition of the game Red Light‚ Green Light based on the hit Netflix series "Squid Game"ǃ Who will be the first to reach the finish line?
                                     </p>
                                 </div>
                                 <div class="button">
@@ -261,7 +261,7 @@
                                 </div>
                                 <div class="desc">
                                     <p>
-                                        A Halloween party is being thrown at an abandoned mansionǃ Come join in the festivities‚ but beware what horrors are lurking in the darknessǃ
+                                        A Halloween party is being thrown at an abandoned mansionǃ Come join in the festivities‚ but beware what horrors await you in the darknessǃ
                                     </p>
                                 </div>
                                 <div class="button">
@@ -301,7 +301,7 @@
                                 </div>
                                 <div class="desc">
                                     <p>
-                                        A huge Halloween party is being thrown in the middle of the cityǃ Check out the preview to Haunted Grounds 2ǃ
+                                        A huge Halloween party is being thrown in the middle of the cityǃ Enjoy the party and explore the city in the preview for Haunted Grounds 2ǃ
                                     </p>
                                 </div>
                                 <div class="button">
