Add Blackout to worlds listing

--- a/worlds.html
+++ b/worlds.html
@@ -44,7 +44,6 @@
             <div class="socials">
                 <a href="https://Twitter.com/Ostinyo"><i class="fa-brands fa-twitter"></i></a>
                 <a href="https://discord.com/invite/qnQSGDnHjm"><i class="fa-brands fa-discord"></i></a>
-
             </div>
             <button class="hamburger hamburger--slider" type="button">
                 <span class="hamburger-box">
@@ -81,6 +80,26 @@
                     <div id="left" class="arrowleft"></div>
                     <div id="right" class="arrowright"></div>
                     <div class="image-container">
+						<div class="card">
+                            <img src="img/Worlds/Blackout.png" alt="Blackout">
+                            <div class="details hide">
+                                <div class="title">
+                                    <h1>Blackout!</h1>
+                                </div>
+                                <div class="desc">
+                                    <p>
+                                        Murderers are on the looseǃ When the lights go out‚ they'll make their moveǃ Work together to put a stop to their killing spreeǃ
+                                    </p>
+                                </div>
+                                <div class="button">
+                                    <button onclick="window.location='https://vrchat.com/home/world/wrld_e9093447-5e69-4eec-8262-358a4ad72db9';">
+                                        <h3>
+                                            Launch World
+                                        </h3>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
                         <div class="card">
                             <img src="img/Worlds/PrisonEscape.png" alt="Prison Escape">
                             <div class="details hide">
