Add contact email to worlds page

--- a/worlds.html
+++ b/worlds.html
@@ -40,6 +40,8 @@
                 <a href='./worlds'>Worlds</a>
                 <span class="vertical-line"></span>
                 <a href="https://www.patreon.com/Ostinyo">Support</a>
+				<span class="vertical-line"></span>
+                <a href="mailto:ostinyo@gmail.com">Contact</a>
             </nav>
             <div class="socials">
                 <a href="https://Twitter.com/Ostinyo"><i class="fa-brands fa-twitter"></i></a>
