--- a/worlds.html
+++ b/worlds.html
@@ -44,8 +44,9 @@
                 <a href="mailto:ostinyo@gmail.com">Contact</a>
             </nav>
             <div class="socials">
-                <a href="https://Twitter.com/Ostinyo"><i class="fa-brands fa-twitter"></i></a>
-                <a href="https://discord.com/invite/qnQSGDnHjm"><i class="fa-brands fa-discord"></i></a>
+                <a href="https://Twitter.com/Ostinyo"><i class="fa-brands fa-x-twitter"></i></a>
+				<a href="https://bsky.app/profile/ostinyo.bsky.social"><i class="fa-brands fa-bluesky"></i></a>
+				<a href="https://discord.com/invite/qnQSGDnHjm"><i class="fa-brands fa-discord"></i></a>
             </div>
             <button class="hamburger hamburger--slider" type="button">
                 <span class="hamburger-box">
@@ -275,10 +276,10 @@
                     <div id="right" class="arrowright"></div>
                     <div class="image-container">
                         <div class="card">
-                            <img src="img/Worlds/HauntedGrounds.png" alt="HauntedGrounds">
+                            <img src="img/Worlds/HauntedGroundsRemastered.png" alt="HauntedGrounds">
                             <div class="details hide">
                                 <div class="title">
-                                    <h1>Haunted Grounds</h1>
+                                    <h1>Haunted Grounds Remastered</h1>
                                 </div>
                                 <div class="desc">
                                     <p>
@@ -286,7 +287,7 @@
                                     </p>
                                 </div>
                                 <div class="button">
-                                    <button onclick="window.location='https://vrchat.com/home/world/wrld_d4fd390c-3bc2-49ab-92a8-4f3b4ece45c8';">
+                                    <button onclick="window.location='https://vrchat.com/home/world/wrld_99b59f03-fc8d-4373-a368-f85b14a4fce5';">
                                         <h3>
                                             Launch World
                                         </h3>
