Update formatting + styling for portrait view

--- a/worlds.html
+++ b/worlds.html
@@ -275,6 +275,26 @@
                     <div id="left" class="arrowleft"></div>
                     <div id="right" class="arrowright"></div>
                     <div class="image-container">
+						<div class="card">
+                            <img src="img/Worlds/HauntedAsylum.png" alt="HauntedAsylum">
+                            <div class="details hide">
+                                <div class="title">
+                                    <h1>Haunted Asylum</h1>
+                                </div>
+                                <div class="desc">
+                                    <p>
+                                        Trapped within the confines of an abandoned asylum‚ try to find your way outǃ But beware‚ there's something lurking in the darknessǃ
+                                    </p>
+                                </div>
+                                <div class="button">
+                                    <button onclick="window.location='https://vrchat.com/home/world/wrld_bd5fd91c-8369-438f-85d2-37ee593a5c36';">
+                                        <h3>
+                                            Launch World
+                                        </h3>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
                         <div class="card">
                             <img src="img/Worlds/HauntedGroundsRemastered.png" alt="HauntedGrounds">
                             <div class="details hide">
@@ -288,26 +308,6 @@
                                 </div>
                                 <div class="button">
                                     <button onclick="window.location='https://vrchat.com/home/world/wrld_99b59f03-fc8d-4373-a368-f85b14a4fce5';">
-                                        <h3>
-                                            Launch World
-                                        </h3>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <img src="img/Worlds/HauntedAsylum.png" alt="HauntedAsylum">
-                            <div class="details hide">
-                                <div class="title">
-                                    <h1>Haunted Asylum</h1>
-                                </div>
-                                <div class="desc">
-                                    <p>
-                                        Trapped within the confines of an abandoned asylum‚ try to find your way outǃ But beware‚ there's something lurking in the darknessǃ
-                                    </p>
-                                </div>
-                                <div class="button">
-                                    <button onclick="window.location='https://vrchat.com/home/world/wrld_bd5fd91c-8369-438f-85d2-37ee593a5c36';">
                                         <h3>
                                             Launch World
                                         </h3>
@@ -449,7 +449,7 @@
 
     <footer class="footer">
         <div class="copyright">
-            <p>© 2022 Ostinyo.com All rights reserved.</p>
+            <p>© 2025 Ostinyo Games</p>
         </div>
     </footer>
 
