--- a/index.html
+++ b/index.html
@@ -107,16 +107,9 @@
         </section>
     </div>
 
-    <div class="back-to-top-btn">
+    <!--<div class="back-to-top-btn">
         <button id="To-Top">Back to Top</button>
-    </div>
-
-
-    <footer class="footer">
-        <div class="copyright">
-            <p>© 2022 Ostinyo.com All rights reserved.</p>
-        </div>
-    </footer>
+    </div>-->
 
     <script src="./js/scripts.js"></script>
 </body>
